[gd_scene load_steps=4 format=3 uid="uid://bsento45p1875"]

[ext_resource type="Script" uid="uid://k1blbjocuokr" path="res://guess_number.gd" id="1_e21lk"]

[sub_resource type="LabelSettings" id="LabelSettings_e21lk"]
font_size = 50

[sub_resource type="Theme" id="Theme_rwmjv"]
Button/font_sizes/font_size = 40

[node name="guess_number" type="Node2D"]
script = ExtResource("1_e21lk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
offset_left = 315.0
offset_top = 119.0
offset_right = 797.0
offset_bottom = 266.0
text = "123"
label_settings = SubResource("LabelSettings_e21lk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 323.0
offset_top = 493.0
offset_right = 827.0
offset_bottom = 570.0
theme = SubResource("Theme_rwmjv")
theme_override_constants/separation = 60

[node name="less" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "猜小了"

[node name="right" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "猜对了"

[node name="more" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "猜大了"

[connection signal="button_down" from="HBoxContainer/less" to="." method="_on_less_button_down"]
[connection signal="button_down" from="HBoxContainer/right" to="." method="_on_right_button_down"]
[connection signal="button_down" from="HBoxContainer/more" to="." method="_on_more_button_down"]
